<resources>
    <string name="app_name">DevFest SPB</string>
    <string name="track">Android</string>

    <string name="buttonLectures">Все доклады</string>
    <string name="thinking">🤔</string>
    <string name="error">Sorry! Maybe next time</string>

    <string name="Author">Evgeny Shishkin</string>
    <string name="job">Android Developer at Aviasales</string>
    <string name="location">St. Petersburg, Russia</string>
    <string name="about">
        Android-разработчик с опытом более 8 лет. Адаптировал телефоны LG под российский рынок, разрабатывал умного ассистента в i-Free и амбициозный аудиогид izi.TRAVEL. В 2016 году присоеденился к команде Aviasales, где разрабатывает приложение Hotellook для поиска лучших цен на отели. Автор популярных android open-source проектов (RobotoTextView, AppMsg, ProgressFragment, Snowfall, MultiBackStack и т.д.)
    </string>
    <string name="topic">Aviasales Отели - практический опыт объединения двух приложений</string>
    <string name="description">
        До недавнего времени у нас независимо существовало два приложения: Aviasales — метапоиск авиабилетов и Hotellook — метапоиск отелей/хостелов/аппартов. И все было хорошо, пока не появилась задача интегрировать возможность поиска и бронирования отелей в приложение Aviasales, для того чтобы увеличить конверсию пользователей в отельную часть и зарабатывать еще больше денег 😁 Так как Aviasales и Hotellook — это совершенно разные проекты с разными командами, разными архитектурными подходами, задача эта оказалась весьма непростой и интересной. Спойлер: В результате объединения приложения свет увидели 2 любопытные open source библиотеки: mrButler и nautilus.
    </string>

    <string name="room">Room NaN</string>
    <string name="time">00:00</string>
    <string name="date">32 December</string>

</resources>
