<?xml version="1.0" encoding="utf-8"?>

<com.faltenreich.skeletonlayout.SkeletonLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/time"
            style="@style/TextView.Primary"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/middle_margin_size"
            android:text="@string/time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/topic"
            style="@style/TextView.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/middle_margin_size"
            android:ellipsize="end"
            android:text="@string/topic"
            app:layout_constraintBaseline_toBaselineOf="@id/time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/time"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/room"
            style="@style/TextView.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/middle_margin_size"
            android:text="@string/room"
            app:layout_constraintStart_toEndOf="@id/time"
            app:layout_constraintTop_toBottomOf="@id/topic" />



        <!--<de.hdodenhof.circleimageview.CircleImageView-->
            <!--android:id="@+id/speakerCountry"-->
            <!--android:layout_width="24dp"-->
            <!--android:layout_height="24dp"-->
            <!--android:layout_marginStart="@dimen/small_margin_size"-->
            <!--android:src="@drawable/rus_flag"-->
            <!--app:civ_border_color="@color/white"-->
            <!--app:civ_border_width="3dp"-->
            <!--app:layout_constraintStart_toEndOf="@id/time"-->
            <!--app:layout_constraintTop_toBottomOf="@id/room" />-->

        <TextView
            android:id="@+id/speakerName"
            style="@style/TextView.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/middle_margin_size"
            android:text="@string/Author"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/time"
            app:layout_constraintTop_toBottomOf="@id/room"/>

        <!--<TextView-->
        <!--android:id="@+id/speakerLocation"-->
        <!--style="@style/TextView"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="@dimen/small_margin_size"-->
        <!--android:text="@string/job"-->
        <!--app:layout_constraintStart_toEndOf="@+id/speakerName"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/room"-->
        <!--app:layout_constraintVertical_bias="1.0"-->
        <!--app:layout_constraintEnd_toEndOf="parent" />-->

        <TextView
            android:id="@+id/speakerJob"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin_size"
            android:layout_marginEnd="@dimen/small_margin_size"
            android:text="job at location"
            app:layout_constraintBaseline_toBaselineOf="@id/speakerName"
            app:layout_constraintStart_toEndOf="@id/speakerName"
             />

        <com.google.android.material.chip.Chip
            android:id="@+id/track"
            style="@style/TextView.Chips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track"
            app:chipIcon="@drawable/shape_oval_coral"
            android:layout_marginTop="@dimen/middle_margin_size"
            android:layout_margin="@dimen/small_margin_size"
            app:chipIconSize="12dp"
            app:iconStartPadding="@dimen/small_margin_size"
            app:layout_constraintStart_toEndOf="@id/time"
            app:layout_constraintTop_toBottomOf="@id/speakerName" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.faltenreich.skeletonlayout.SkeletonLayout>
